# odoo-sphinx-autodoc

./: .gitignore  README.md  setup.cfg  setup.py
sphinxodoo/ext/: autodoc.py
willdooit/ext/: odoo_autodoc.py
