[metadata]
name = willdooit-odoo-autodoc
author = WilldooIT Ltd
author_email = info@willdooit.com
license = file: LICENSE.txt
description = Sphinx extension to use autodoc on odoo.addons.*
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilldooIT/willdooit-odoo-autodoc
project_urls =
    Website = https://www.willdooit.com/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Framework :: Sphinx :: Extension
    Topic :: Documentation :: Sphinx
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
install_requires = Sphinx >= 4.0
